--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Olá mundo do VSCode!</h1> 
+   <h1>Olá mundo do VSCode!</h1>
+   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates similique pariatur nulla! Maxime perferendis, vel recusandae hic nobis quo delectus officia veritatis ipsa non cumque ea debitis labore facilis vero.</p>
 </body>
 </html>
