atualização nova branch nova

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
    <h1>Olá mundo do VSCode!</h1>
    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates similique pariatur nulla! Maxime perferendis, vel recusandae hic nobis quo delectus officia veritatis ipsa non cumque ea debitis labore facilis vero.</p>
+   <h2>Atualização dessa branch nova (feature2.0)</h2>
 </body>
 </html>
